--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://leahrdt.github.io/AppClima",
   "name": "clima-app",
   "version": "0.1.0",
   "private": true,
@@ -6,8 +7,17 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.4.0",
+    "build": "^0.1.4",
+    "font-awesome": "4.7.0",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
+    "react-bootstrap-icons": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
