--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
-  "homepage":"https://appclimalfr.000webhostapp.com/",
+  "homepage":"https://leahrdt.github.io/AppClima/",
   
   "scripts": {
     "start": "react-scripts start",
